<resources>
    <string name="app_name">COOPay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>

    <!-- Strings related to login -->
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_confirm_password">Password dosen\'t match</string>
    <string name="error_invalid_emial">Invalid Email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="birthday">Birthday</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_to_get_all_features">Create account to COOPay to get all features</string>
    <string name="login_here">Login here</string>
    <string name="timeout">Connection timeout</string>
    <string name="generic_error">Generic error</string>
    <string name="nointernet">No internet connection</string>
    <string name="error_invalid_conf_password">Password desnt match</string>
    <string name="about">About</string>
    <string name="editProfile">Edit</string>
    <string name="Settings">Setting</string>
    <string name="Rate_Us">Rate</string>


    <string name="Lbl_ContactUs_Privacy">Faq and contact us</string>
    <string name="Lbl_NeedHelp">Need Help?</string>
    <string name="Lbl_InviteFriendsToTheApp">Invite Friends to use app</string>
    <string name="Lbl_InviteFriends">Invite Friends</string>
    <string name="Lbl_About">About</string>
    <string name="Lbl_Rate">Give your rate and feedback</string>
    <string name="Lbl_Rate_Us">Rate</string>
    <string name="Lbl_Update">Update</string>
    <string name="Lbl_Version_update">Check for the latest version</string>
    <string name="Lbl_Settings">Settings</string>
    <string name="Lbl_EditProfile">Edit Profile</string>
    <string name="Lbl_privacy_policy">App Terms and Policies</string>
    <string name="Lbl_Privacy">Privacy Policy</string>
    <string name="share_app_text">Please kindly share User Profile Template with your friends!</string>
</resources>