<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ededed"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".ui.SignupActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/let_s_get_started"
            android:textColor="#1d1d1d"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_account_to_get_all_features"
            android:textColor="#1d1d1d"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="#00B7EB"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="#00B7EB"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="false">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"

                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minEms="6"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="14sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirm_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_text"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minEms="6"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="14sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="#1566e0"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/login_here"
                android:textColor="#1566e0" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>