<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:transitionName="imageTransition"
                android:src="@drawable/logo"
                android:tint="#ffffff" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Welcome back!"
                    android:textColor="#1d1d1d"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Log in to your existing account of COOPay"
                    android:textColor="#1d1d1d"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/background_edit_text"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:drawablePadding="2dp"
                    android:padding="16dp"
                    android:hint="@string/username"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:inputType="textPersonName"
                    android:textColor="#00B7EB"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/pass_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_edit_text"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:drawablePadding="2dp"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColor="#00B7EB"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:padding="16dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:textSize="14sp"
                        app:passwordToggleEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_pass_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="#1566e0"
                    android:textSize="@dimen/secondary_text" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/login_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="#1566e0"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account" />

                    <TextView
                        android:id="@+id/sign_up_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/sign_up"
                        android:textColor="#1566e0" />
                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>