<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".ui.SignupActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/let_s_get_started"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Create account to get all features"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="First Name">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="Middle Name">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/m_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="Last Name">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="Address">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="Email">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="Phone number">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="@string/username">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minEms="6"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_edit_text"
            android:gravity="center"
            android:hint="@string/birthday">
            <!-- INPUT -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:inputType="date"
                android:maxLines="1"
                android:minEms="6"
                android:padding="16dp"
                android:textColor="#00B7EB"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>